--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,7 @@
                   
                   <div class="navbar-links" id="navbarLinks">
                     <a href="/" class="{{ 'active' if request.path == '/' }}">Home</a>
-                    <a href="#about" class="{{ 'active' if request.path == '/about' }}">About</a>
-                    <a href="https://github.com/your-username/muninn" target="_blank">GitHub</a>
+                    <a href="https://github.com/arivvid27/Salazar" target="_blank">GitHub</a>
                   </div>
                 </div>
               </nav>
